--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>My Buddy Pikachu!</title>
 
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
@@ -22,8 +22,8 @@
     
 
     <!-- <video id="webcam" autoplay playsinline></video> -->
-    
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
+  
+    <a-scene embedded arjs="sourceType: webcam;  debugUIEnabled: true;">
         <a-assets>
             <!-- Loading the Draco compressed model - My Sleeping Pikachu Model was Draco Compressed-->
             <a-asset-item id="pika" src="assets/pika.glb"></a-asset-item>
